@@ -1,4 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX dracut-9999-multipath-udev-rules.patch 852 RMD160 b215724ca292f6e7faa94f9e29aea3cd910a85be SHA1 5e00b4032c26dfbe794c0dc43b6d783e9f744983 SHA256 464566649128b42d5735b6d4521b01d6f826b3857e889a1f313448b2f4eae246
-EBUILD dracut-9999.ebuild 5607 RMD160 766713ceb10951b096bbf9c8007f5e83b423fac4 SHA1 30ea26b4ca5a009443601d07a5e7070e4f54f6b6 SHA256 12560c7252802ebfde1d25e78059aadeef212b48997d383af9978a9f89468a1f
-MISC ChangeLog 4398 RMD160 91c4ab251f506528d61ebe8011fd64a396dcbd0e SHA1 102d9e4fd93dd7db735c2f6254ec309a542e438c SHA256 5d688c9d938fcd1a7c73cfdfe77e4df7619b5aaba2a6ff4c5fe13bc2bfa7937f
+EBUILD dracut-9999.ebuild 5912 RMD160 daf83fbd5e4953b72e16062303f9158b1f19604a SHA1 5525d3b9b66c797698e648562b139cfb9d5f5148 SHA256 36dd3a30c17a648e33b9dc20698fc891bfbc335ed6a2c7f851c5470a58357f38
+MISC ChangeLog 4648 RMD160 d03fd78e5bbeabeb43b7dce69232b5663ccde798 SHA1 9d21aaada09ce0932bc0de48a042ff7a4720d11c SHA256 6f8a85c89a151d3a4a72d44f43714ed89539bdb05ca60dfa245fa5ecfdfa4507
 MISC metadata.xml 522 RMD160 cb669af2ea684d2147d389113e09b9fceda13046 SHA1 f3be6bdbd983a477c1edf7d761b9b90cff4b9933 SHA256 6d59cdf4ae81d8d024aa45e7891b28c7511d7e3ee38265f8342580305944fb60
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQEcBAEBAgAGBQJOQjrjAAoJEPATRTHh2/q1WgMH/1H8VnpfJE2P8KPEG0znGfk9
+/tSALF2iNl2vLdX7kpYHKAa5KEsIVwxDj1r7hXGEGZWszK75CF9eJz7/FWyEeyPM
+395temetHo4CSczuHUbMbM0mfUWsGwCL5qSNZObwa7Bcb1+J4uJ2MNv1vgLD0cG3
+49TDoDx5zBAhIa4efZqw2ZrXD5L8279Q+2wJIJ3km7wuobmDNy6Sqtn1NAv+1HLf
+ql4jYsDL6hbtW3tiqlvLU/3Imo7bbAfCqs8FsVennwabLVVtGOyrAj7gzZHp7HvB
+cqds/Ufqc4PdFh75NqVFqVbMVDWOBmtUWHzA5ggt0glX+Ktt6tjAldTk6u77Ais=
+=F4jh
+-----END PGP SIGNATURE-----
